recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
			snowSide(length/(3))
                                ^Koch:19: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
			snowSide(length/(3))
                                ^Koch:21: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
			snowSide(length/(3))
                                ^Koch:23: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
			snowSide(length/(3))
                                ^